yiltc/testsuite/negative/duplicate_function.yilt
fn foo()
    return 1

fn foo()
    return 2
